<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">More Time</string>

    <!-- common -->
    <string name="common_ok">OK</string>
    <string name="common_close">Close</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_discard">Discard</string>
    <string name="common_save">Save</string>
    <string name="common_create">Create</string>

    <!-- project activity -->
    <string name="activity_project_title">Projects</string>
    <string name="menu_create_project">Create Project</string>
    <string name="menu_edit_project">Project Settings</string>
    <string name="menu_delete_project">Delete Project</string>
    <string name="menu_wifi_tracking_configuration">Wi-Fi Tracking</string>
    <string name="menu_settings">Settings</string>

    <!-- project creation -->
    <string name="hint_project_title">What is it called?</string>

    <!-- date/time picker dialogs -->
    <string name="set_date">Set Date</string>
    <string name="set_no_date">Set NO Date</string>

    <!-- hour limit dialog -->
    <string name="set_limit">Set Limit</string>
    <string name="set_no_limit">Set NO Limit</string>

    <!-- project details -->
    <string name="menu_create_custom_tracking_record">Add manual time record</string>

    <!-- project statistics -->
    <string name="expiration_statistic_project_ended_on_X">Expired on %1$s.</string>
    <string name="expiration_statistic_X_days_remaining_until_end_date_Y">Expires in %1$d days (until %2$s)</string>
    <string name="completion_statistic_X_recorded">Completed %1$sh</string>
    <string name="completion_statistic_X_of_Y_recorded">Completed %1$sh/%2$dh</string>
    <string name="nothing_recorded_yet">Nothing recorded yet ..</string>
    <string name="less_than_one">&lt;1</string>

    <!-- tracking record editing -->
    <string name="menu_confirm_tracking_record_edit">Confirm</string>
    <string name="menu_delete_tracking_record">Delete Record</string>
    <string name="from_X">%1$s</string>
    <string name="until_X">%1$s</string>
    <string name="title_tracking_record_creation">Create Time Record</string>
    <string name="title_tracking_record_editing">Edit Time Record</string>
    <string name="error_date_missing">Please set a date</string>
    <string name="error_time_missing">Please set a time</string>
    <string name="error_end_before_start">This ends before it starts</string>
    <string name="hint_date">Date..</string>
    <string name="hint_time">.. time</string>
    <string name="label_from">From</string>
    <string name="label_until">Until</string>
    <string name="label_rounding">Rounding</string>
    <string name="label_description">Log</string>

    <!-- tracking record view -->
    <string name="running_since_X">Started %1$s</string>
    <string name="running_from_X_until_Y">%1$s - %2$s</string>

    <!-- duration printing -->
    <string name="seconds_short">s</string>
    <string name="minutes_short">m</string>
    <string name="hours_short">h</string>

    <!-- project deletion dialog -->
    <string name="title_delete_project_X">Delete %1$s?</string>
    <string name="msg_you_lose_X">You lose records amounting to %1$s. This cannot be undone!</string>
    <string name="msg_you_lose_no_tracking_records">Nothing has been recorded yet for this project.</string>
    <string name="button_delete_project">Delete Project</string>

    <!-- tracking record deletion dialog-->
    <string name="title_delete_tracking_record">Delete Record?</string>
    <string name="msg_delete_tracking_record">The record will be deleted, the associated time is removed from the project.</string>
    <string name="button_delete_tracking_record">Delete</string>

    <!-- warning dialog discard changes -->
    <string name="msg_confirm_data_loss_from_backpress">You have unsaved modifications..</string>

    <!-- tracking record description editor dialog -->
    <string name="hint_tracking_record_description">What did you do?</string>
    <string name="button_show_tracking_record_editing_activity">Advanced</string>

    <!-- project creation dialog -->
    <string name="title_project_creation_dialog">New project</string>
    <string name="error_project_title_missing">Title missing!</string>
    <string name="button_just_create_project">Create</string>
    <string name="button_open_configuration_after_project_creation">Advanced</string>

    <!-- warning dialog tracking is out of project time frame -->
    <string name="warning_tracking_before_project_time_frame_which_starts_at_X">This project starts at %1$s!\nDo you want to check in now?</string>
    <string name="warning_tracking_after_project_time_frame_which_ended_on_X">This project ended on %1$s!\nDo you still want to check in now?</string>

    <!-- warning dialog tracking beyond project amount -->
    <string name="warning_tracking_exceeds_project_amount_of_X_hours">Project hour limit (%1$d) reached.\nStill keep tracking?</string>

    <!-- project view -->
    <string name="current_record_started_at_X">Tracking since %1$s</string>
    <string name="last_record_ended_at_X">Last record ended %1$s</string>
    <string name="duration_label_X_no_max">Recorded hours:</string>
    <string name="less_than_one_hour">&lt;1h</string>
    <string name="duration_X_no_max">%1$dh</string>
    <string name="duration_label_X_of_Y">Recorded hours (/max):</string>
    <string name="less_than_one_hour_of_X">&lt;1h/%1$dh</string>
    <string name="duration_X_of_Y">%1$dh/%2$dh</string>
    <string name="duration_zero">..none yet</string>
    <string name="label_remaining_days_until_date_Y">Remaining days (end date):</string>
    <string name="label_remaining_days_over">Remaining days:</string>
    <string name="remaining_days_X_until_date_Y">%1$d (%2$s)</string>
    <string name="remaining_days_over_since_X">project over since %1$s</string>
    <string name="project_closed">Project closed.</string>

    <!-- tracking stopped summary snackbar -->
    <string name="snack_X_booked_on_project_Y">%1$s booked on %2$s</string>
    <string name="snack_describe_tracking_record">Add comment</string>

    <!-- placeholders -->
    <string name="sample_duration">11:45:00 hrs</string>
    <string name="sample_local_date">16. Maerz 2016</string>
    <string name="sample_tracking_record_log">This is a first line\nand this one a second</string>
    <string name="sample_project_title">A Project Title</string>
    <string name="sample_tracking_record_summary">last: 7:30 &#8212; 19:00 24.12.2016</string>
    <string name="sample_duration_X">7h/140h</string>
    <string name="sample_remaining_days_X_until_date_Y">7 (24.12.2016)</string>
    <string name="sample_from_date_X">From 24/12/2016</string>
    <string name="sample_until_date_X">Until 24/12/2016</string>
    <string name="sample_app_version_info">More Time, 1.123-abcd1234</string>

    <!-- project settings -->
    <string name="project_configuration_activity_title">Project Settings</string>
    <string name="general_project__preference_group_title">General</string>
    <string name="project_title_preference_key">project_title_preference_key</string>
    <string name="project_title_preference_title">Project Title</string>
    <string name="project_description_preference_key">project_description_preference_key</string>
    <string name="project_description_preference_title">Project Description</string>
    <string name="project_contract_id_preference_key">project_contract_id_preference_key</string>
    <string name="project_contract_id_preference_title">Contract Id / Billing Id</string>
    <string name="warning_invalid_title_was_reverted">Invalid title has been reverted</string>
    <string name="warning_invalid_description_was_reverted">Invalid description has been reverted</string>
    <string name="warning_invalid_contract_id_was_reverted">Invalid Contract Id has been reverted</string>
    <string name="project_limits_subscreen_title">Limitations</string>
    <string name="project_limits_subscreen_summary">Hour caps</string>
    <string name="tracking_configuration_hour_limit_preference_key">tracking_configuration_hour_limit_preference_key</string>
    <string name="tracking_configuration_hour_limit_preference_title">Hour Limit</string>
    <string name="tracking_configuration_hour_limit_preference_summary_none">No Hour Limit</string>
    <string name="warning_invalid_hour_limit_was_reverted">Invalid hour limit has been reverted</string>
    <string name="hour_limit_of_X_hours">Project limited to %1$d hours</string>
    <string name="tracking_configuration_start_date_preference_key">tracking_configuration_start_date_preference_key</string>
    <string name="tracking_configuration_start_date_preference_title">First Day</string>
    <string name="tracking_configuration_start_date_preference_summary_none">The project starts at no specific date</string>
    <string name="tracking_configuration_end_date_inclusive_preference_key">tracking_configuration_end_date_inclusive_preference_key</string>
    <string name="tracking_configuration_end_date_inclusive_preference_title">Last Day</string>
    <string name="tracking_configuration_end_date_inclusive_preference_summary_none">The project ends at no specific date</string>
    <string name="starts_at_X">First day of project: %1$s</string>
    <string name="ends_at_inclusive_X">Last day of project: %1$s</string>
    <string name="warning_invalid_start_date_was_reverted">Invalid start date has been reverted!</string>
    <string name="warning_invalid_end_date_was_reverted">Invalid end date has been reverted!</string>
    <string name="project_closed_title">Project Archived</string>
    <string name="project_closed_summary">Project is closed for Check Ins</string>
    <string name="project_not_closed_summary">Project is open for Check Ins</string>
    <string name="project_not_closable_summary">Project currently tracking - cannot close now.</string>
    <string name="advanced_project_preference_group_title">Advanced</string>
    <string name="project_lifecycle_subscreen_title">Lifecycle</string>
    <string name="project_lifecycle_subscreen_summary">First &amp; Last Day, Project Archival</string>

    <string name="project_after_checkout_subscreen_title">After Check Out</string>
    <string name="project_after_checkout_subscreen_summary">Rounding, Notifications</string>
    <string name="tracking_configuration_rounding_strategy_preference_key">tracking_configuration_rounding_strategy_preference_key</string>
    <string name="tracking_configuration_rounding_strategy_preference_title">Rounding Behaviour</string>
    <string name="rounding_no_rounding_label">No rounding</string>
    <string name="rounding_minutes_down">Round down to full minutes</string>
    <string name="rounding_minutes_up">Round up to full minutes</string>
    <string name="rounding_ten_minutes_up">Round up to a full 10 minutes block</string>
    <string name="rounding_thirty_minutes_up">Round up to a full half hour block</string>
    <string name="rounding_sixty_minutes_up">Round up to full hours</string>
    <string name="tracking_configuration_prompt_for_description_preference_key">tracking_configuration_prompt_for_description_preference_key</string>
    <string name="tracking_configuration_prompt_for_description_preference_title">Ask for a comment after each session</string>

    <!-- general settings -->
    <string name="general_group_title">General Settings</string>
    <string name="application_settings_activity_title">Settings</string>
    <string name="libraries_and_trademarks_screen_title">Libraries, Licenses &amp; Trademarks</string>
    <string name="libraries_group_title">Libraries used</string>
    <string name="guava_library_title">Guava (Apache License 2.0)</string>
    <string name="otto_library_title">Otto (Apache License 2.0)</string>
    <string name="joda_library_title">Joda-Time (Apache License 2.0)</string>
    <string name="trademarks_group_title">Trademarks</string>
    <string name="trademark_android_title">Android, Google, Google Drive</string>
    <string name="trademark_android_summary">Android, Google and Google Drive are trademarks of Google Corporation.</string>
    <string name="trademarks_other_title">Other Trademarks</string>
    <string name="trademarks_other_summary">All other trademarks belong to their respective owners.</string>
    <string name="application_W_version_X_githash_Y_buildtype_Z">%1$s, %2$s-%3$s (%4$s)</string>
    <string name="about_group_title">About</string>

</resources>
